--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
         <button id="selectButton" type="button" class="btn" data-toggle="tooltip" data-placement="bottom" title="Select" disabled ><i class="mouse-pointer" aria-hidden="true" ></i></button>
       </li>
       <li class="nav-item">
-        <button id="cropButton" class="btn" data-toggle="tooltip" data-placement="bottom" title="crop" disabled ><i class="button-crop" aria-hidden="true"></i></button>
+        <button id="cropButton" class="btn" data-toggle="tooltip" data-placement="bottom" title="Crop" disabled ><i class="button-crop" aria-hidden="true"></i></button>
       </li>
       <li class="nav-item">
           <button id="textButton" class="btn" data-toggle="tooltip" data-placement="bottom" title="Font" disabled ><i class="button-font" aria-hidden="true"></i></button>
         </li>
 
         <li class="nav-item">
-          <button id="color-bucket" class="btn" data-toggle="tooltip" data-placement="bottom" title="bucket" disabled ><i class="button-bucket" aria-hidden="true"></i></button>
+          <button id="color-bucket" class="btn" data-toggle="tooltip" data-placement="bottom" title="Color Bucket" disabled ><i class="button-bucket" aria-hidden="true"></i></button>
         </li>
 
         <li class="nav-item">
-          <button id="color-wheel" class="btn" data-toggle="tooltip" data-placement="bottom" title="color picker" disabled ><i class="color-wheel" aria-hidden="true"></i></button>
+          <button id="color-wheel" class="btn" data-toggle="tooltip" data-placement="bottom" title="Color Picker" disabled ><i class="color-wheel" aria-hidden="true"></i></button>
         </li>
         <li class="nav-item">
-          <button id="edit-pen" class="btn" data-toggle="tooltip" data-placement="bottom" title="draw line" disabled ><i class="edit-pen" aria-hidden="true"></i></button>
+          <button id="edit-pen" class="btn" data-toggle="tooltip" data-placement="bottom" title="Draw Line" disabled ><i class="edit-pen" aria-hidden="true"></i></button>
         </li>
  
 
@@ -62,18 +62,18 @@
             </select>
         </li>
       <li class="nav-item">
-        <button id="edit-eraser" class="btn" data-toggle="tooltip" data-placement="bottom" title="edit eraser" disabled ><i class="edit-eraser" aria-hidden="true"></i></button>
+        <button id="edit-eraser" class="btn" data-toggle="tooltip" data-placement="bottom" title="Edit Eraser" disabled ><i class="edit-eraser" aria-hidden="true"></i></button>
       </li>
       <li class="nav-item">
-        <button id="edit-layer" class="btn" data-toggle="tooltip" data-placement="bottom" title="edit layer" disabled ><i class="edit-layer" aria-hidden="true"></i></button>
+        <button id="edit-layer" class="btn" data-toggle="tooltip" data-placement="bottom" title="Edit Layer" disabled ><i class="edit-layer" aria-hidden="true"></i></button>
       </li>
       
       <li class="nav-item dropdown" id="layer-lable">
         <select id ="layers" class="ql-size" disabled>
-            <option value = '1'>layer 1</option>
-            <option value="2">layer 2</option>
-            <option value="3">layer 3</option>
-            <option value="4" selected>layer 4</option>
+            <option value = '1'>Layer 1</option>
+            <option value="2">Layer 2</option>
+            <option value="3">Layer 3</option>
+            <option value="4" selected>Layer 4</option>
           </select>
         </div>
       </li>
